--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -465,7 +465,7 @@ header {
 		border-bottom: 1px solid rgba(0, 0, 0, 0.075);
 
 		img {
-			height: 26px;
+			width: 100%;
 			margin: 0 18px;
 		}
 	}
