118/09/2023 - Changing Search placeholder text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 			</h1>
 
 			<form action="{{ site.baseurl }}/search/" method="get">
-				<input type="text" name="q" id="search-input" placeholder="Search">
-				<input type="submit" value="Search" style="display: none;">
+				<input type="text" name="q" id="search-input" placeholder="Rechercher">
+				<input type="submit" style="display: none;">
 			</form>
 			
 			{% include sidebar.html %}
