18/09/2023 - Some changes for Result Search feature
- Replacing url on the search form action attribut
- Renaming search.html file to recherche.html and inside changing title and permalink
- Translating head titles for results search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 				<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.svg" height="40" alt="{{ site.title }} logo"></a>
 			</h1>
 
-			<form action="{{ site.baseurl }}/search/" method="get">
+			<form action="{{ site.baseurl }}/recherche/" method="get">
 				<input type="text" name="q" id="search-input" placeholder="Rechercher">
 				<input type="submit" style="display: none;">
 			</form>
